<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="costMeal">Cost of Meal:  </string>
    <string name="numPeople">Number of People:  </string>
    <string name="percTip">Percent Tip:</string>
    <string name="perPerson">Price Per Person:</string>
    <string name="resultTip">$0.00</string>
    <string name="resultTotal">$0.00</string>
    <string name="resultPerPerson">$0.00</string>
    <string name="btnCalculate">Calculate</string>
    <string name="hintCost">0.00</string>
    <string name="hintPeople">1</string>
    <string name="hintTip">18</string>
    <string name="tip">Tip Amount:</string>
    <string name="total">Total Bill Plus Tip:</string>
</resources>
